<resources>
    <string name="app_name">Card Games</string>
    <string name="deal">Deal</string>
    <string name="show_hand">Show Hand</string>
    <string name="dealers_hand">Dealer\'s Hand:</string>
    <string name="your_cards">Your Cards:</string>
    <string name="new_session">New Session</string>
    <string name="keep_playing">Keep Playing</string>
    <string name="score">Score:</string>
    <string name="opt_out">Opt Out</string>
    <string name="title_activity_blackjack">BlackjackActivity</string>
    <string name="stick">Stick</string>
    <string name="split">Split</string>
    <string name="hit">Hit</string>
    <string name="dealers_turn">Dealer\'s Turn</string>
    <string name="result">Result</string>
    <string name="game1">Beat The Dealer</string>
    <string name="game2">Blackjack</string>
    <string name="menu">Menu</string>
</resources>
